--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,12 +3,6 @@
 <%- include('./partials/head.ejs')%>
 
 <body>
-
-
-
-
-
-
   <h1>Home</h1>
   <h2>Your path to becoming a Node.js ninja!</h2>
     <h1>Home</h1>
@@ -20,8 +14,10 @@
     <h2>All Blogs</h2>
     <% if(blogs.length >0){ %>
         <%blogs.forEach(blog => {%>
+        <a class="single"href="/blogs/"<% = blog._id%>
          <h3 class="title"><%blog.title%></h3> 
          <p class="snippet"><%blog.snippet%></p>  
+        </a>
 
      <%})%>
     <% } else{ %>
