--- a/views/create.ejs
+++ b/views/create.ejs
@@ -10,15 +10,14 @@
     <%- include('./partials/nav.ejs')%>
 
   <div class="create-blog content">
-    <form>
+    <form action="/blogs" method= "POST">
 
      <label for = "title">Blog title:</label>
-     <input type = "text" id="title" required>
+     <input type = "text" id="title" name="title" required>
      <label for = "snippet">Blog Snippet:</label>
-     <input type = "snippet" id="snippet" required>
+     <input type = "snippet" id="snippet" name="snippet" required>
      <label for = "body">Blog Body:</label>
-     <input type = "body" id="body" required>
-     <textarea id="body" required></textarea>
+     <textarea id="body" required name = "body"></textarea>
      <button>Submit</button>
     </form>
   </div>
